--- a/CSS/Colors.css
+++ b/CSS/Colors.css
@@ -9,7 +9,7 @@
 }
 
 .bg-pink{background-color: #fadee1;}
-.bg-orange{background-color: #fad4ae;}
+.bg-orange{background-color: #ffd8be;}
 .bg-yellow{background-color: #faf1d6;}
 .bg-red{background-color: #fdafab;}
 .bg-blue{background-color: #d9f1f1;}
