--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -31,8 +31,8 @@
 
 
 body{
-	padding-top: 90px;
-	padding-bottom: 70px;
+	padding-top: 20px;
+	padding-bottom: 90px;
 	color: #424242;
 	background-color: #ffc5bf;
 
@@ -41,20 +41,21 @@ body{
 }
 
 .bg-navbar{background-color: #da9788;}
+.bg-footer{background-color: #da9788;}
 .bg-form{background-color: #FCB9AA;}
 
 .form-100{
-margin-bottom: 20px;
-width: 100% !important;
+	margin-bottom: 20px;
+	width: 100% !important;
 }
 
 .btn-form{
-width: 100% !important;
-background-color: #da9788;
+	width: 100% !important;
+	background-color: #da9788;
 }
 
 .btn-form:hover{
-background-color: #b97566;
+	background-color: #b97566;
 }
 
 .card{
