--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -44,18 +44,28 @@ body{
 .bg-footer{background-color: #da9788;}
 .bg-form{background-color: #FCB9AA;}
 
-.form-100{
-	margin-bottom: 20px;
-	width: 100% !important;
-}
+.fa-stack-1x{color: #000;}
+.fa-stack-2x{color: #b87566;}
+
+.btn-form:hover{background-color: #b97566;}
 
 .btn-form{
 	width: 100% !important;
 	background-color: #da9788;
 }
 
-.btn-form:hover{
-	background-color: #b97566;
+.progress{
+	margin-top: 25px !important;
+	border: solid 2px #da9788;
+	background-color: #ffc5bf;
+	width: 100%;
+}
+
+.progress-bar{background-color: #da9788;}
+
+.form-100{
+	margin-bottom: 20px;
+	width: 100% !important;
 }
 
 .card{
@@ -80,6 +90,3 @@ body{
 }
 
 .closebtn:hover{color: black;}
-
-.fa-stack-1x{color: #000;}
-.fa-stack-2x{color: #b87566;}
