Working Game :star:

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -34,7 +34,7 @@ body{
 	padding-top: 20px;
 	padding-bottom: 110px;
 	color: #424242;
-	background-color: #ffc5bf;
+	background-color: #ffdbcc;
 
 	font-family:'Caviar Dreams';
 	font-weight: normal;
